--- a/MonitoringTool/MonitoringTool/mTool.html
+++ b/MonitoringTool/MonitoringTool/mTool.html
@@ -35,13 +35,15 @@
  	  - Monitoring Tool
   </div>
     <div id="map-canvas" style= "width:900px; height:500px"> </div>
-    <div id="controlPanel" value='Control Panel'> 
-	    <select id="dropdown" class="styled-button">
+    <div id="controlPanel" value='Control Panel'>  
+	    <select id="dropdown" class="button">
 	    <option value=''>---- Globale Lobby ----</option>
 	    <option value='{"mode":"gametemplates"}'>1. Verfügbare Spiele anfordern</option>
-	    <option value='{"mode":"activegames"}'>2. Laufende Spiele anfordern</option>
-	    <option value='{"mode":"monitor", "id":1, "name":"Monitor1"}'>3. Spiel betrachten</option>
+	    <option value='{"mode":"runninggames"}'>2. Laufende Spiele anfordern</option>
+	    <option value='{"mode":"monitor", "id":0, "name":"Monitor1"}'>3. Spiel betrachten</option>
 		</select>   
+		<form id="sendForm"><input type="text" id="textField" value="" class="button">
+    	<input type="submit" value="Send" class="button" style="width:80px">    </form>    
 	</div>
     <form><textarea id="log" rows="30" cols="100" style="font-family:monospace; color:red; margin-left: 20px;"></textarea></form><br>
 
