--- a/MonitoringTool/MonitoringTool/index.html
+++ b/MonitoringTool/MonitoringTool/index.html
@@ -7,19 +7,13 @@
 	<style>
     </style>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.0/css/jquery.dataTables.css">
-    <link rel="stylesheet" type="text/css" href="dropDown.css" />
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="WebsocketService.js"></script>
     <script type="text/javascript" src="Whiteboard.js"></script>
     <script type="text/javascript" src="map.js"></script>
-    <script type="text/javascript" src="playerTable.js"></script>
+    <script type="text/javascript" src="WhiteboardExplorer.js"></script>
     <script type="text/javascript" src="prototype.js"></script>
     <script type="text/javascript" src="dropDownMenu.js"></script>
-    <script type="text/javascript" src="Table.js"></script>
-    <script type="text/javascript" src="ControlDiv.js"></script>
 
 	<script>
 			window.onload = function(){
